fix: hide footer link text when icon is visible in FooterComponent

--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -48,7 +48,7 @@
 @media (max-width: 450px) {
   .footer-links {
     a {
-      .link-text {
+      span {
         display: none;
       }
 
